Added profile, completed books and index

--- a/public/information.html
+++ b/public/information.html
@@ -31,13 +31,14 @@
   </div>
 </nav>
 <main>
-
-<h1>Welcome!</h1>
-<div class="imgtxt" id="txtimg">
-<img src="img/hi.jpg">
-<p>Source: Google images</p>
-</div>
-<p>Thank you for visiting my website! For more information see the navigation bar above.</p>
+  <h1>User Information</h1>
+  <div class="imgtxt" id="txtimg">
+  <img src="img/profile.jpg">
+  <p>Source: Google images</p>
+  </div>
+<p>Name: Harrison Ford</p>
+<p>Country: United States</p>
+<p>Birthdate: July 13, 1942</p>
+<p>Age: 77</p>
+<p>Email: ishotfirst@example.com</p>
 </main>
-</body>
-</html>
