Overlapped some of the bootstrap defaults. Made images clickable.

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -34,7 +34,9 @@
 
 <h1>Welcome!</h1>
 <div class="imgtxt" id="txtimg">
+<a href="img/hi.jpg">
 <img src="img/hi.jpg">
+</a>
 <p>Source: Google images</p>
 </div>
 <p>Thank you for visiting my website! For more information see the navigation bar above.</p>
