--- a/public/information.html
+++ b/public/information.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Navbar</a>
+  <a class="navbar-brand" href="#"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -33,12 +33,16 @@
 <main>
   <h1>User Information</h1>
   <div class="imgtxt" id="txtimg">
+  <a href="img/profile.jpg">
   <img src="img/profile.jpg">
+</a>
   <p>Source: Google images</p>
   </div>
+<div class="profiletxt">
 <p>Name: Harrison Ford</p>
 <p>Country: United States</p>
 <p>Birthdate: July 13, 1942</p>
 <p>Age: 77</p>
 <p>Email: ishotfirst@example.com</p>
+</div>
 </main>
