made email clickable

--- a/public/information.html
+++ b/public/information.html
@@ -43,6 +43,6 @@
 <p>Country: United States</p>
 <p>Birthdate: July 13, 1942</p>
 <p>Age: 77</p>
-<p>Email: ishotfirst@example.com</p>
+<p>Email: <a href="mailto:ishotfirst@example.com">ishotfirst@example.com</a></p>
 </div>
 </main>
