--- a/public/books.html
+++ b/public/books.html
@@ -91,7 +91,7 @@
   </div>
   <div class="form-group">
     <label for="inputAddress">Year Published:</label>
-    <input type="text" class="form-control" placeholder="Enter year published">
+    <input type="number" class="form-control" placeholder="Enter year published">
   </div>
   <div class="form-group">
     <label for="inputAddress">Publisher:</label>
@@ -99,11 +99,11 @@
   </div>
   <div class="form-group">
     <label for="inputAddress">Page Count:</label>
-    <input type="text" class="form-control" placeholder="Enter page count">
+    <input type="number" class="form-control" placeholder="Enter page count">
   </div>
   <div class="form-group">
     <label for="inputAddress">MSRP:</label>
-    <input type="text" class="form-control" placeholder="Enter MSRP">
+    <input type="number" class="form-control" placeholder="Enter MSRP">
   </div>
   <button type="submit" class="btn btn-primary">Add</button>
 </form>
